# graphgen

./: Cargo.toml  README.md  res.txt
src/: errors.rs  main.rs  scraper.rs  worker.rs
