[package]
name = "graphgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
crossbeam-channel = "0.5.8"
flurry = "0.4.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
scraper = "0.15.0"
thiserror = "1.0.40"
